enhancements and added score tracking

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mini-Kahoot</title>
+  <title>Markdown Mash</title>
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
   <div class="container">
     <header class="header">
-      <h1>Mini-Kahoot</h1>
+      <h1>Markdown Mash</h1>
       <p>Real-time quiz platform for interactive learning</p>
     </header>
 
