--- a/public/admin.html
+++ b/public/admin.html
@@ -63,7 +63,8 @@
       <!-- Participants -->
       <div id="participants-section" class="card hidden">
         <h2>Participants <span id="participant-count" class="badge badge-info">0</span></h2>
-        <p class="text-muted">Share this URL with participants: <strong id="join-url"></strong></p>
+        <p class="text-muted">Participant URL: <strong id="join-url"></strong></p>
+        <p class="text-muted">Presenter URL (for screen share): <a id="presenter-url" href="/present.html" target="_blank" style="color: var(--primary);"></a></p>
         <div id="participant-list" class="participant-list"></div>
       </div>
 
