--- a/public/play.html
+++ b/public/play.html
@@ -5,87 +5,92 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Markdown Mash</title>
   <link rel="stylesheet" href="/css/style.css">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
-<body>
-  <div class="container compact">
+<body class="player-body">
+  <div class="player-container">
+
     <!-- Join Section -->
-    <div id="join-section" class="card">
-      <div class="text-center mb-4">
-        <h1 class="logo">Markdown Mash</h1>
+    <div id="join-section" class="player-section">
+      <div class="player-logo">Markdown Mash</div>
+      <div class="join-card">
+        <h2>Join Quiz</h2>
+        <form id="join-form">
+          <input type="text" id="player-name" placeholder="Enter your name" required maxlength="30">
+          <button type="submit" class="btn btn-success btn-block btn-lg">Join</button>
+        </form>
+        <p id="join-error" class="error-text hidden"></p>
       </div>
-      <form id="join-form">
-        <label for="player-name">Your Name</label>
-        <input type="text" id="player-name" placeholder="Enter your name" required maxlength="30">
-        <button type="submit" class="btn btn-success btn-block btn-lg">Join Quiz</button>
-      </form>
-      <p id="join-error" class="text-center mt-4 hidden" style="color: var(--danger);"></p>
     </div>
 
     <!-- Waiting Section -->
-    <div id="waiting-section" class="card hidden">
-      <div class="waiting-screen compact">
+    <div id="waiting-section" class="player-section hidden">
+      <div class="player-logo">Markdown Mash</div>
+      <div class="waiting-content">
         <div class="spinner"></div>
-        <h2>You're in!</h2>
-        <p id="welcome-name" class="text-muted">Welcome, Player</p>
-        <p id="quiz-title-display" class="mt-4" style="font-size: 1.25rem; font-weight: 600;"></p>
-        <p class="text-muted">Waiting for host to start...</p>
+        <h2 id="welcome-name">Welcome!</h2>
+        <p id="quiz-title-display" class="quiz-title"></p>
+        <p class="waiting-text">Waiting for host to start...</p>
       </div>
     </div>
 
     <!-- Question Section -->
-    <div id="question-section" class="card hidden">
-      <div class="question-header">
-        <span class="question-meta">Q<span id="current-q-num">1</span>/<span id="total-q-num">10</span></span>
-        <span id="score-display" class="score-badge">Score: 0</span>
+    <div id="question-section" class="player-section hidden">
+      <div class="player-header">
+        <span class="player-qnum">Q<span id="current-q-num">1</span>/<span id="total-q-num">10</span></span>
+        <span class="player-score"><span id="score-display">0</span> pts</span>
       </div>
-      <h2 id="question-text" class="question-text compact">Question text here</h2>
-      <div id="timer" class="timer compact">20</div>
-      <div id="options-container" class="options-grid compact"></div>
-      <div id="answer-status" class="text-center hidden">
-        <span class="badge badge-success">Submitted!</span>
+
+      <div class="player-timer-ring">
+        <svg class="timer-svg" viewBox="0 0 100 100">
+          <circle class="timer-bg" cx="50" cy="50" r="45"></circle>
+          <circle class="timer-progress" id="timer-progress" cx="50" cy="50" r="45"></circle>
+        </svg>
+        <div class="timer-text" id="timer">20</div>
       </div>
+
+      <h1 class="player-question" id="question-text">Question?</h1>
+
+      <div class="player-options" id="options-container"></div>
+
+      <div id="answer-status" class="answer-status hidden">Submitted!</div>
     </div>
 
-    <!-- Results Section (after each question) -->
-    <div id="results-section" class="card hidden">
-      <div class="result-header">
-        <span id="result-status" class="result-icon"></span>
-        <div class="result-score">
+    <!-- Results Section -->
+    <div id="results-section" class="player-section hidden">
+      <div class="result-display">
+        <div id="result-icon" class="result-icon"></div>
+        <h2 id="result-text"></h2>
+        <div class="result-score-display">
           <span id="current-score">0</span> pts
         </div>
       </div>
 
-      <div class="result-answers">
-        <div class="result-answer-row">
+      <div class="result-details">
+        <div class="result-detail-row">
           <span class="label">Your answer:</span>
           <span id="your-answer" class="value"></span>
         </div>
-        <div class="result-answer-row correct">
-          <span class="label">Correct:</span>
+        <div class="result-detail-row correct">
+          <span class="label">Correct answer:</span>
           <span id="correct-answer" class="value"></span>
         </div>
       </div>
 
-      <div class="chart-container compact">
-        <canvas id="results-chart"></canvas>
-      </div>
-
-      <p class="text-center text-muted">Next question coming...</p>
+      <p class="waiting-text">Next question coming...</p>
     </div>
 
     <!-- Quiz Ended Section -->
-    <div id="ended-section" class="card hidden">
-      <div class="final-results">
+    <div id="ended-section" class="player-section hidden">
+      <div class="final-display">
         <div id="final-icon" class="final-icon"></div>
         <h2 id="final-status">Quiz Complete!</h2>
-        <div class="final-score">
+        <div class="final-score-big">
           <span id="final-score-value">0</span>
-          <span class="final-score-total">/ <span id="final-score-max">100</span></span>
+          <span class="final-score-max">/ <span id="final-score-max">100</span></span>
         </div>
-        <p id="final-percentage" class="final-percentage">0%</p>
-        <p id="final-message" class="final-message"></p>
-        <a href="/" class="btn btn-primary mt-4">Play Again</a>
+        <p id="final-percentage" class="final-pct">0%</p>
+        <p id="final-message" class="final-msg"></p>
+        <a href="/" class="btn btn-primary">Play Again</a>
       </div>
     </div>
 
