added logout feature

--- a/public/admin.html
+++ b/public/admin.html
@@ -13,8 +13,10 @@
       <h1>Admin Dashboard</h1>
       <p>Manage and control your quiz</p>
       <div class="header-actions">
+        <a href="/" class="btn btn-secondary">Home</a>
         <button id="analytics-btn" class="btn btn-secondary hidden">View Analytics</button>
         <button id="settings-btn" class="btn hidden" title="Settings">Settings</button>
+        <button id="logout-btn" class="btn btn-danger hidden" title="Logout">Logout</button>
       </div>
     </header>
 
