update to analytics and passing v2

--- a/public/admin.html
+++ b/public/admin.html
@@ -247,9 +247,9 @@
           <div id="tricky-questions-container" class="mt-4"></div>
         </div>
 
-        <!-- Passed Participants -->
+        <!-- Top Participants -->
         <div class="detail-card mt-4" id="passed-section">
-          <h3>Passed Participants <span class="pass-count-badge" id="passed-count-badge"></span></h3>
+          <h3>Top Participants <span class="pass-count-badge" id="passed-count-badge"></span></h3>
           <table class="results-table">
             <thead>
               <tr>
@@ -263,12 +263,12 @@
             </thead>
             <tbody id="passed-participants-body"></tbody>
           </table>
-          <p id="no-passed-msg" class="text-muted text-center mt-4 hidden">No participants passed.</p>
+          <p id="no-passed-msg" class="text-muted text-center mt-4 hidden">No top participants.</p>
         </div>
 
-        <!-- Failed Participants -->
+        <!-- Remaining Participants -->
         <div class="detail-card mt-4" id="failed-section">
-          <h3>Did Not Pass <span class="pass-count-badge" id="failed-count-badge"></span></h3>
+          <h3>Participants <span class="pass-count-badge" id="failed-count-badge"></span></h3>
           <table class="results-table">
             <thead>
               <tr>
@@ -282,7 +282,7 @@
             </thead>
             <tbody id="failed-participants-body"></tbody>
           </table>
-          <p id="no-failed-msg" class="text-muted text-center mt-4 hidden">Everyone passed!</p>
+          <p id="no-failed-msg" class="text-muted text-center mt-4 hidden">Everyone made it to the top!</p>
         </div>
       </div>
 
